<resources>
    <string name="app_name">Firebase</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="firebase">Firebase</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign in</string>
    <string name="login">login</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="submit">Submit</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
</resources>