<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80DEEA"
    tools:context=".MobileVerification">


    <Button
        android:id="@+id/Login"
        android:layout_width="126dp"
        android:layout_height="65dp"
        android:layout_marginBottom="248dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/login"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintTop_toBottomOf="@+id/send_OTP"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/mobile_verification"
        android:textColor="#272727"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TIL2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/send_OTP"
        android:layout_width="126dp"
        android:layout_height="65dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/send_otp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/TIL1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/send_OTP"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone_number"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
